--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -108,9 +108,9 @@
 <div class="map-container" *ngIf="isHomePage">
   <h1>Map Shelters</h1>
 
-  <div class="findshelter"> 
+  <!-- <div class="findshelter"> 
     <input type="text" [(ngModel)]="searcshelter">  <button (click)="findshelter()">Пошук</button>
-</div>
+</div> -->
 
   <div id="map" style="width: 90%; height: 700px;"></div>
 
