--- a/src/frontend/src/app/donate/donate.component.css
+++ b/src/frontend/src/app/donate/donate.component.css
@@ -153,12 +153,13 @@ body {
 
 /* Container for Shelters */
 .shelters-container {
-  padding: 20px;
+  margin-top: 30px;
 }
 .shelters-container .shelter-cards {
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 .shelters-container h2 {
  margin-bottom: 30px;
@@ -168,12 +169,15 @@ body {
 .shelter-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 50px;
+  gap: 80px;
   
 }
-
+.shelter-card .nameshelter{
+  text-align: center;
+  margin-bottom: 10px;
+}
 .shelter-card {
-  width: 250px;
+  width: 300px;
   padding: 10px;
   border-radius: 8px;
   cursor: pointer;
@@ -225,9 +229,10 @@ body {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
-  width: 400px;
+  width: 500px;
   text-align: left;
   position: relative;
+  gap: 5px;
 }
 
 .modal-content h2 {
@@ -236,7 +241,12 @@ body {
   margin-bottom: 15px;
   text-align: center;
 }
-
+.modal-content h3 {
+  font-size: x-large;
+}
+.modal-content .nameshelter{
+  margin-bottom: 20px;
+}
 .modal-content img {
   width: 100%;
   height: auto;
