Зроблено фільтрування і дизай для тваринок.

--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -72,6 +72,7 @@
           <img src="/user.svg" alt="1488" class="photo">
           <button class="btn_out" (click)="logout()">Вийти</button>
          </div>
+
         <!-- <ol>
           <li class="drop">
                <img src="/imgforlogin" alt="1488" >
@@ -112,7 +113,7 @@
     <input type="text" [(ngModel)]="searcshelter">  <button (click)="findshelter()">Пошук</button>
 </div> -->
 
-  <div id="map" style="width: 90%; height: 700px;"></div>
+  <div id="map" style="width: 90%; height: 700px; border-radius: 17px;"></div>
 
 </div>
 
