--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
@@ -7,7 +7,8 @@
     
 </head>
 <body>
-    <h1 class="Name_shelter">dfdf</h1>
+    <h1 class="Name_shelter">{{shelter_Name}}</h1>
+    <!-- <h1 class="Name_shelter">{{shelter_ID}}</h1> -->
     <div class="animals-container">
       
         <div class="animal-cards">
