--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="Name_shelter">{{shelter_Name}}</h1>
-    <!-- <h1 class="Name_shelter">{{shelter_ID}}</h1> -->
+    <h1 class="Name_shelter">{{shelter_ID}}</h1>
     <div class="animals-container">
       
         <div class="animal-cards">
@@ -57,8 +57,7 @@
                class="animal-card"
                [ngStyle]="{'background-color': '#dedede'}">
             <img [src]="animal.imageURL" alt="{{ animal.name }}" />
-             <h3>{{ animal.name }}</h3>
-           
+             <h3>{{ animal.id }}</h3>
             <div class="info_about_pet">
                <p>{{animal.sex}}</p>
                <div class="circle"></div>
