--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>Document</title> -->
-    
+
 </head>
 <body>
     <h1 class="Name_shelter">dfdf</h1>
     <div class="animals-container">
-      
+
         <div class="animal-cards">
-          
+
           <div class="sidebar" >
             <div class="filter-group">
                 <label>Тип тварини</label>
@@ -49,7 +49,7 @@
                 <button [ngClass]="{'active' :activeFilters['steril'].includes('Стерелізована') }" (click)="toggleFilter('steril','Стерелізована')" class="S">Стерелізована</button>
                 <button [ngClass]="{'active' :activeFilters['need_help'].includes('Потребує особливого догляду') }" (click)="toggleFilter('need_help','Потребує особливого догляду')" class="P">Потребує особливого догляду</button>
             </div>
-            
+
         </div>
 
           <div *ngFor="let animal of animals"
@@ -57,7 +57,7 @@
                [ngStyle]="{'background-color': '#dedede'}">
             <img [src]="animal.imageURL" alt="{{ animal.name }}" />
              <h3>{{ animal.name }}</h3>
-           
+
             <div class="info_about_pet">
                <p>{{animal.sex}}</p>
                <div class="circle"></div>
@@ -66,12 +66,12 @@
             <div class="info_about_pet">
                 <p>Потребує особливого догляду</p>
             </div>
-            
+
             <div class="info_about_pet">
                 <p>Вакцинована</p>
                 <div class="circle"></div>
                 <p>Стерелізована</p>
-                  
+
              </div>
              <div class="buttonn" (click)="selectAnimal(animal)">
                <svg width="50" height="50" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -81,7 +81,7 @@
               </svg></div>
           </div>
         </div>
-       
+
        <div class="pagination">
           <button (click)="previousPage()" [disabled]="currentPage === 1" class="previous">Назад</button>
           <span>Сторінка {{ currentPage }} з {{ totalPages }}</span>
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-      
+
       <!-- Модальне вікно для детальної інформації про тварину -->
       <div *ngIf="selectedAnimal" class="modal">
         <div class="modal-content">
@@ -97,104 +97,99 @@
           <img [src]="selectedAnimal.imageURL" alt="{{ selectedAnimal.name }}" />
           <div class="info">
              <h2><strong>{{ selectedAnimal.name }}</strong></h2>
-          <p><strong>Тип: </strong> {{ selectedAnimal.sex }}</p>
-          <p><strong>Вік: </strong>{{ selectedAnimal.age }} років</p>
+          <p><strong>Тип: </strong> {{ selectedAnimal.type }}</p>
           <p><strong>Розмір: </strong> {{ selectedAnimal.size }}</p>
           <p><strong>Опис: </strong> {{ selectedAnimal.description }}</p>
           <p><strong>Місто: </strong> {{ selectedAnimal.city }}</p>
-          <p><strong>Назва притулку: </strong></p> 
+          <p><strong>Контактний номер притулку: </strong>{{ selectedAnimal.shelterPhoneNumber }}</p>
         </div>
-         
+
           <div class="buttonForAdoptAndWard">
             <button (click)="openWardForm()" class="Adoptbtn">Взяти під опіку</button>
              <button (click)="openAdoptForm()" class="Wardbtn">Усиновити</button>
           </div>
-         
+
         </div>
       </div>
-      
+
       <div *ngIf="isAdoptFormOpen" class="modalAdopt">
       <div class="adopt-content">
         <span (click)="closeAdoptForm()" class="close-button1">&times;</span>
         <h1>Форма заявки на усиновлення тварини</h1>
-      
-        <form (ngSubmit)="ModalAdopt()" class="adopt"> 
+
+        <form (ngSubmit)="ModalAdopt()" class="adopt">
          <label for="name">Ваше ім'я:</label>
-         <input type="text" id="name" [(ngModel)]="name" name="name" placeholder="Введіть ваше ім'я" required>
-      
+         <input type="text" id="firstName" [(ngModel)]="firstName" name="name" placeholder="Введіть ваше ім'я" required>
+
          <label for="surname">Ваше прізвище:</label>
-         <input type="text" id="surname"[(ngModel)]="surname" name="surname" placeholder="Введіть ваше прізвище" required>
-      
+         <input type="text" id="lastName"[(ngModel)]="lastName" name="surname" placeholder="Введіть ваше прізвище" required>
+
          <label for="email">Email:</label>
          <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
-      
+
          <label for="phone">Телефон:</label>
-         <input type="tel" id="phone" [(ngModel)]="phone"  name="phone" placeholder="Введіть ваш номер телефону" required>
-      
-      
+         <input type="tel" id="contactNumber" [(ngModel)]="contactNumber"  name="phone" placeholder="Введіть ваш номер телефону" required>
+
+
          <label for="exp">Чи маєте досвід догляду за тваринами?</label>
-          <select id="exp" [(ngModel)]="exp" name="exp" required>
+          <select id="experience" [(ngModel)]="experience" name="exp" required>
            <option value="">Маєте досвід догляду за тваринами?</option>
            <option value="yes">Так</option>
            <option value="no">Ні</option>
           </select>
-         
-            <input type="hidden" [(ngModel)]="namePet" name="namePet" [value]="isAdoptFormOpen.name">
-            <input type="hidden" [(ngModel)]="AgePet" name="AgePet" [value]="isAdoptFormOpen.age">
-            <input type="hidden" [(ngModel)]="SexPet" name="SexPet" [value]="isAdoptFormOpen.sex">
-            <input type="hidden" [(ngModel)]="SizePet" name="SizePet" [value]="isAdoptFormOpen.size">
-            <input type="hidden" [(ngModel)]="TypePet" name="TypePet" [value]="isAdoptFormOpen.type">
-            <!-- <input type="hidden" [(ngModel)]="shelter" name="shelter" [value]="isAdoptFormOpen.shelter"> -->
-            <input type="hidden" [(ngModel)]="City" name="City" [value]="isAdoptFormOpen.city">
-          
-      
+
+<!--            <input type="hidden" [(ngModel)]="namePet" name="namePet" [value]="isAdoptFormOpen.name">-->
+<!--            <input type="hidden" [(ngModel)]="AgePet" name="AgePet" [value]="isAdoptFormOpen.age">-->
+<!--            <input type="hidden" [(ngModel)]="SexPet" name="SexPet" [value]="isAdoptFormOpen.sex">-->
+<!--            <input type="hidden" [(ngModel)]="SizePet" name="SizePet" [value]="isAdoptFormOpen.size">-->
+<!--            <input type="hidden" [(ngModel)]="TypePet" name="TypePet" [value]="isAdoptFormOpen.type">-->
+
+
           <button type="submit">Надіслати заявку</button>
        </form>
-      
+
       </div>
       </div>
-      
-      
+
+
       <div *ngIf="isWardFormOpen" class="modalWard">
         <div class="ward-content">
           <span (click)="closeWardForm()" class="close-button2">&times;</span>
           <h1>Форма заявки на опіку</h1>
-        
-          <form (ngSubmit)="ModalWard()" class="ward"> 
+
+          <form (ngSubmit)="ModalWard()" class="ward">
            <label for="name">Ваше ім'я:</label>
-           <input type="text" id="name" [(ngModel)]="name" name="name" placeholder="Введіть ваше ім'я" required>
-        
+           <input type="text" id="name" [(ngModel)]="firstName" name="name" placeholder="Введіть ваше ім'я" required>
+
            <label for="surname">Ваше прізвище:</label>
-           <input type="text" id="surname"[(ngModel)]="surname" name="surname" placeholder="Введіть ваше прізвище" required>
-        
+           <input type="text" id="surname"[(ngModel)]="lastName" name="surname" placeholder="Введіть ваше прізвище" required>
+
            <label for="email">Email:</label>
-           <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
-        
+           <input type="email" id="email1" [(ngModel)]="email" name="email" placeholder="Введіть ваш email" required>
+
            <label for="phone">Телефон:</label>
-           <input type="tel" id="phone" [(ngModel)]="phone"  name="phone" placeholder="Введіть ваш номер телефону" required>
-        
-        
+           <input type="tel" id="phone" [(ngModel)]="contactNumber"  name="phone" placeholder="Введіть ваш номер телефону" required>
+
+
            <label for="exp">Чи маєте досвід догляду за тваринами?</label>
-            <select id="exp" [(ngModel)]="exp" name="exp" required>
+            <select id="exp" [(ngModel)]="experience" name="exp" required>
              <option value="">Маєте досвід догляду за тваринами?</option>
              <option value="yes">Так</option>
              <option value="no">Ні</option>
             </select>
-           
-              <input type="hidden" [(ngModel)]="namePet" name="namePet" [value]="isAdoptFormOpen.name">
-              <input type="hidden" [(ngModel)]="AgePet" name="AgePet" [value]="isAdoptFormOpen.age">
-              <input type="hidden" [(ngModel)]="SexPet" name="SexPet" [value]="isAdoptFormOpen.sex">
-              <input type="hidden" [(ngModel)]="SizePet" name="SizePet" [value]="isAdoptFormOpen.size">
-              <input type="hidden" [(ngModel)]="TypePet" name="TypePet" [value]="isAdoptFormOpen.type">
-              <!-- <input type="hidden" [(ngModel)]="shelter" name="shelter" [value]="isAdoptFormOpen.shelter"> -->
-              <input type="hidden" [(ngModel)]="City" name="City" [value]="isAdoptFormOpen.city">
-            
-        
+
+              <input type="hidden" [(ngModel)]="animalName" name="namePet" [value]="isWardFormOpen.name">
+              <input type="hidden" [(ngModel)]="animalAge" name="AgePet" [value]="isWardFormOpen.age">
+              <input type="hidden" [(ngModel)]="animalSex" name="SexPet" [value]="isWardFormOpen.sex">
+              <input type="hidden" [(ngModel)]="animalSize" name="SizePet" [value]="isWardFormOpen.size">
+              <input type="hidden" [(ngModel)]="typeOfAnimal" name="TypePet" [value]="isWardFormOpen.type">
+
+
             <button type="submit">Надіслати заявку</button>
          </form>
-        
+
         </div>
         </div>
-      
+
 </body>
 </html>
