Теоретично виправив сзовані інпути

--- a/src/frontend/src/app/find-f/find-f.component.html
+++ b/src/frontend/src/app/find-f/find-f.component.html
@@ -107,11 +107,11 @@
        <option value="no">Ні</option>
       </select>
      
-        <input type="hidden" [(ngModel)]="namePet" name="namePet" [value]="isAdoptFormOpen.name">
-        <input type="hidden" [(ngModel)]="AgePet" name="AgePet" [value]="isAdoptFormOpen.age">
-        <input type="hidden" [(ngModel)]="SexPet" name="SexPet" [value]="isAdoptFormOpen.sex">
-        <input type="hidden" [(ngModel)]="SizePet" name="SizePet" [value]="isAdoptFormOpen.size">
-        <input type="hidden" [(ngModel)]="TypePet" name="TypePet" [value]="isAdoptFormOpen.type">
+        <input type="hidden" [(ngModel)]="namePet" name="namePet" [value]="isWardFormOpen.name">
+        <input type="hidden" [(ngModel)]="AgePet" name="AgePet" [value]="isWardFormOpen.age">
+        <input type="hidden" [(ngModel)]="SexPet" name="SexPet" [value]="isWardFormOpen.sex">
+        <input type="hidden" [(ngModel)]="SizePet" name="SizePet" [value]="isWardFormOpen.size">
+        <input type="hidden" [(ngModel)]="TypePet" name="TypePet" [value]="isWardFormOpen.type">
         <!-- <input type="hidden" [(ngModel)]="shelter" name="shelter" [value]="isAdoptFormOpen.shelter"> -->
         <input type="hidden" [(ngModel)]="City" name="City" [value]="isAdoptFormOpen.city">
       
