--- a/src/frontend/src/app/adopt/adopt.component.html
+++ b/src/frontend/src/app/adopt/adopt.component.html
@@ -22,15 +22,20 @@
          <label for="phone">Телефон:</label>
          <input type="tel" id="phone" [(ngModel)]="contactNumber"   name="contactNumber" placeholder="Введіть ваш номер телефону" required>
 
-         <label for="">Притулок</label>
-    <input type="tel" id="shelter"  [(ngModel)]="shelter" name="shelter" placeholder="" required>
+         <label for="shelter">Притулки:</label>
+         <select type="text" id="shelter" [(ngModel)]="shelter"  name="shelter"  required>
+          <option value="" disabled selected hidden>Оберіть притулок</option>
+           <option *ngFor="let shelter of shelters" [value]="shelter.id">
+             {{ shelter.name }}
+           </option>
+         </select>
 
          <label for="animal">Яку тварину ви хочете усиновити:</label>
          <select id="animal" [(ngModel)]="typeOfAnimal"  name="typeOfAnimal" required>
-           <option value="">Виберіть тварину</option>
-           <option value="cat">Кіт</option>
-           <option value="dog">Пес</option>
-           <option value="other">Інші</option>
+          <option value="" disabled selected hidden>Оберіть тваринку</option>
+          <option *ngFor="let animal of animals" [value]="animal.name">
+            {{ animal.name }}
+          </option>
          </select>
 
          <label for="exp">Чи маєте досвід догляду за тваринами?</label>
