--- a/src/frontend/src/app/free-people/free-people.component.css
+++ b/src/frontend/src/app/free-people/free-people.component.css
@@ -38,7 +38,7 @@ label{
     font-weight: bold;
     margin-bottom: 8px;
 }
- input ,button{
+ input,select,button{
     margin-bottom: 15px;
     padding: 10px;
     font-size: 16px;
