--- a/src/frontend/src/app/for-all-shelter/for-all-shelter.component.css
+++ b/src/frontend/src/app/for-all-shelter/for-all-shelter.component.css
@@ -1,9 +1,13 @@
+
 body {
     font-family: 'e-ukr';
     margin: 0;
     padding: 0;
     display: flexbox;
     background-color: #f9f9f9;
+}
+.Id_shelter{
+  display: none;
 }
 .Name_shelter{
   display: flex;
@@ -13,17 +17,17 @@ body {
 }
 .animal-card .buttonn{
   position: absolute; /* Абсолютна позиція відносно animal-card */
-  bottom: 10px; 
-  right: 10px; 
+  bottom: 10px;
+  right: 10px;
   width: 50px;
   height: 50px;
   color: #f9f9f9;
   background-color: #fc8f00;
   border-radius: 100%;
-    
-  
+
+
 }
-/* .animal-card .buttonn:hover{   
+/* .animal-card .buttonn:hover{
     background-color: #e38100;
 } */
 .buttonn{
@@ -48,13 +52,13 @@ body {
     box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     overflow-y: scroll;
-    
+
 }
 
 .sidebar .filter-group,
 .sidebar .filter-groupOther {
     margin-bottom: 10px;
-} 
+}
 .sidebar .filter-group label,
 .filter-groupOther label {
     display: block;
@@ -75,8 +79,8 @@ body {
     font-size: 15px;
     transition: all 0.3s ease-in-out;
     margin-right: 7px;
-   
-  
+
+
 }
 
 .sidebar .filter-group button:hover,
@@ -98,7 +102,7 @@ body {
 /* .V{max-width: 140px;}    .S{ max-width: 146px;}   .P{max-width: 273px;} */
 
 /* /////////////////////////////////////////////////////////////////////////////////////// */
-.animals-container  .animal-cards{margin: auto 170px;}  
+.animals-container  .animal-cards{margin: auto 170px;}
 /* .animals-container {margin-top: 100px;} */
 
   .animals-container h2 {
@@ -107,14 +111,14 @@ body {
    margin-bottom: 35px;
   }
   .animals-container .pagination { margin: 25px auto;}
-    
+
   .animal-cards {
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-auto-rows: minmax(500px, auto); 
+    grid-auto-rows: minmax(500px, auto);
     gap: 50px;
   }
-  
+
   .animal-card {
 
     position: relative;
@@ -122,23 +126,23 @@ body {
     overflow: hidden;
     border-radius: 20px;
 
-    transition: transform 0.2s; 
-   
-    
+    transition: transform 0.2s;
+
+
   }
 .animal-card:nth-child(2){ grid-column: 2;}
 .animal-card:nth-child(3){grid-column: 3;}
 
   .animal-card img {
-    width: 100%; 
-    height: 370px; 
-    object-fit: cover; 
+    width: 100%;
+    height: 370px;
+    object-fit: cover;
   }
 
   .animal-card h3 { margin-left: 5px; margin-top: 5px; }
-  
+
     .animal-card .info_about_pet {
-      display: flex; 
+      display: flex;
       gap: 10px;
       font-family: 'e-ukrL';
       font-size: 16px;
@@ -154,7 +158,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     width: 25%;
-    
+
   }
   .previous, .next {margin-top: 13px;}
   .info{
@@ -174,7 +178,7 @@ body {
     z-index: 2;
     backdrop-filter: blur(10px);
   }
-  
+
   .modal-content {
     position: relative;
     background-color: white;
@@ -208,15 +212,15 @@ body {
   .close-button2:hover {
     background-color: #ccccccb4;
   }
-  
+
   .buttonForAdoptAndWard {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    border-radius: 10px;
-   
+
   }
-  
+
   .modalAdopt{
     position: fixed;
     top: 0;
@@ -230,23 +234,23 @@ body {
     z-index: 3;
   }
   .adopt-content h1{
-    
+
     text-align: center;
-    line-height: 1.5cm;   
+    line-height: 1.5cm;
   }
   .adopt-content{
     position: relative;
     background: #fff;
     padding: 20px;
-    border-radius: 8px; 
+    border-radius: 8px;
     text-align: start;
   }
   .adopt{
     display: flex;
     flex-direction: column;
-    
+
   }
-  
+
   .modalWard{
     position: fixed;
     top: 0;
@@ -264,7 +268,7 @@ body {
     margin-bottom: 10px;
     color: #ffffff;
     background-color: #fc8f00
-  
+
   }
   .Adoptbtn:hover,
   .Wardbtn:hover{
@@ -280,19 +284,19 @@ body {
   }
   .ward-content h1{
     text-align: center;
-    line-height: 1.5cm;   
+    line-height: 1.5cm;
   }
-  
+
   .ward{
     display: flex;
     flex-direction: column;
   }
-  
+
   label {
       margin-bottom: 8px;
       font-weight: bold;
   }
-  
+
   input, select,  button {
       margin-bottom: 15px;
       padding: 10px;
@@ -303,13 +307,12 @@ body {
   button{
       color: #ffffff;
       background-color: #fc8f00
-      
-      
+
+
   }
   button:hover{
       background-color: #d97b00;
       transition: 0.2s ease-in-out;
-      
+
   }
 
-  
